# voxel-world

./: .gitignore  CMakeLists.txt  shaders.bat
glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Glad.sln  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters
glad/Debug/: glad.idb  glad.lib
glad/Release/: glad.lib
glad/glad.dir/Debug/: glad.lib.recipe
glad/glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glad.lastbuildstate
glad/glad.dir/Release/: glad.lib.recipe
glad/glad.dir/Release/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glad.lastbuildstate
glad/include/glad/: glad.h
glad/src/: glad.c
lib/: glfw3.lib
src/: main.cpp
src/graphics/: geometry.h  model.h  shader.h  transform.h
src/shaders/: default.frag  default.vert
src/utils/: exception.h  generators.h  read_image.h  read_string_from_file.h  vertex_data.h
